Nuevo Activity Informacion

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.david.sec">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ActivityListaEstados"></activity>
+        <activity android:name=".Informacion"></activity>
+        <activity android:name=".ActivityListaEstados" />
         <activity
             android:name=".portada"
             android:screenOrientation="landscape">
@@ -28,5 +27,7 @@
             android:name=".MainActivity"
             android:screenOrientation="landscape" />
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
