--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Informacion"></activity>
-        <activity android:name=".ActivityListaEstados" />
+        <activity
+            android:name=".Informacion"
+            android:screenOrientation="landscape">
+        </activity>
+        <activity
+            android:name=".ActivityListaEstados" />
         <activity
             android:name=".portada"
             android:screenOrientation="landscape">
