--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Informacion"
-            android:screenOrientation="landscape">
+            android:name=".Informacion">
         </activity>
         <activity
             android:name=".ActivityListaEstados" />
